--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mhaslehner.finanzmanager">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +22,8 @@
         <activity android:name=".KategorieStatistik" />
         <activity android:name=".WochenStatistik" />
         <activity android:name=".Verbesserungen"></activity>
+        <activity android:name=".PreferenceActivity"></activity>
+        <activity android:name=".KategorieVerwaltung"></activity>
     </application>
 
 </manifest>
