--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".KategorieDetails"></activity>
         <activity android:name=".AktivitaetenAnzeigen"></activity>
         <activity android:name=".Statistik"></activity>
+        <activity android:name=".StatistikAll"></activity>
     </application>
 
 </manifest>
