--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mhaslehner.finanzmanager">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,12 +19,13 @@
         </activity>
         <activity android:name=".AddAusgabe" />
         <activity android:name=".AddEinnahme" />
-        <activity android:name=".PreferenceActivity"></activity>
-        <activity android:name=".KategorieVerwaltung"></activity>
-        <activity android:name=".KategorieDetails"></activity>
-        <activity android:name=".AktivitaetenAnzeigen"></activity>
-        <activity android:name=".Statistik"></activity>
-        <activity android:name=".StatistikAll"></activity>
+        <activity android:name=".PreferenceActivity" />
+        <activity android:name=".KategorieVerwaltung" />
+        <activity android:name=".KategorieDetails" />
+        <activity android:name=".AktivitaetenAnzeigen" />
+        <activity android:name=".Statistik" />
+        <activity android:name=".StatistikAll" />
+        <activity android:name=".StatistikWeeks"></activity>
     </application>
 
 </manifest>
